{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 4,
  "lineage": "820873cf-1e11-8702-a44a-038e4f7d7e2a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084e8c05825742534",
            "arn": "arn:aws:ec2:eu-west-2:099419146709:instance/i-0339ab9353874f947",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0339ab9353874f947",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "london-tf",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c62d9c0f33027513",
            "private_dns": "ip-172-31-43-7.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.43.7",
            "public_dns": "ec2-3-10-51-150.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.51.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d64f329333588dfa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "vpc-ssh",
              "vpc-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0964ad40f6a70b2bd",
            "tags": {
              "Name": "EC2 instance 1"
            },
            "tags_all": {
              "Name": "EC2 instance 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03445407254879c9a",
              "sg-0c9fa8298fc1fadef"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-ssh",
            "aws_security_group.vpc-web",
            "data.aws_ami.amz-linux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:099419146709:security-group/sg-03445407254879c9a",
            "description": "This is the DEV VPC SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outbounds",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03445407254879c9a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 22 (ssh)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc-ssh",
            "name_prefix": "",
            "owner_id": "099419146709",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-ssh"
            },
            "tags_all": {
              "Name": "vpc-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-04898a112cf875484"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:099419146709:security-group/sg-0c9fa8298fc1fadef",
            "description": "This is the DEV VPC WEB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outbounds",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9fa8298fc1fadef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 80 (web)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc-web",
            "name_prefix": "",
            "owner_id": "099419146709",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-web"
            },
            "tags_all": {
              "Name": "vpc-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-04898a112cf875484"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}